--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -7,11 +7,11 @@
     android:padding="20dp"
     android:layout_marginTop="20dp">
 
-    <androidx.constraintlayout.utils.widget.ImageFilterView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/college_logo"
-        android:padding="10dp"/>
+        android:layout_marginTop="10dp"/>
 
 
 
