--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -14,7 +14,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:layout_marginTop="100dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -23,10 +24,10 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/support_back"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/support" />
+                    android:scaleType="fitCenter"/>
 
             </LinearLayout>
 
@@ -174,10 +175,9 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="40dp"
                         android:layout_marginEnd="30dp"
-                        android:layout_marginBottom="80dp"
+                        android:layout_marginBottom="150dp"
                         android:background="@drawable/bg_icons"
                         android:text="send"
-                        android:textColor="#250909"
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </LinearLayout>
