--- a/app/src/main/res/layout/activity_faculty_profile.xml
+++ b/app/src/main/res/layout/activity_faculty_profile.xml
@@ -11,9 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+        </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
