--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,24 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".profile"
-    android:id="@+id/side_nav"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:layout_height="match_parent">
 
-
-
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/navigation_side_nav"
-        app:headerLayout="@layout/header"
-        app:menu="@menu/side_nav"
-        android:layout_gravity="start"/>
 
 
     <ScrollView
@@ -30,25 +16,15 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:background="#67BA"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:navigationIcon="@drawable/side_nav_tool" />
+            android:layout_height="wrap_content">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/toolbar"
+                android:layout_alignParentTop="true"
                 android:layout_gravity="center"
-                android:layout_marginTop="-56dp"
+                android:layout_marginTop="56dp"
                 android:orientation="vertical">
 
 
@@ -61,7 +37,6 @@
                     android:drawingCacheQuality="auto"
                     android:gravity="center"
                     android:text="DASHBOARD"
-                    android:textColor="#423B3B"
                     android:textSize="30sp"
                     android:textStyle="bold" />
 
@@ -73,7 +48,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/dashboard_bg"
-                    android:backgroundTint="#666666"
+                    android:backgroundTint="#d1bf8d"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -82,8 +57,7 @@
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_marginTop="30dp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/graduated" />
+                        android:layout_weight="1" />
 
                     <TextView
                         android:id="@+id/username"
@@ -161,8 +135,7 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:drawingCacheQuality="high"
-                                android:padding="2dp"
-                                app:srcCompat="@drawable/book" />
+                                android:padding="2dp" />
 
                             <TextView
                                 android:id="@+id/textView5"
@@ -194,8 +167,7 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:drawingCacheQuality="high"
-                                android:padding="2dp"
-                                app:srcCompat="@drawable/results" />
+                                android:padding="2dp" />
 
                             <TextView
                                 android:id="@+id/textView6"
@@ -227,8 +199,7 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:drawingCacheQuality="high"
-                                android:padding="2dp"
-                                app:srcCompat="@drawable/queries" />
+                                android:padding="2dp" />
 
                             <TextView
                                 android:id="@+id/textView10"
@@ -269,8 +240,7 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:drawingCacheQuality="high"
-                                android:padding="2dp"
-                                app:srcCompat="@drawable/teacher" />
+                                android:padding="2dp" />
 
                             <TextView
                                 android:id="@+id/textView7"
@@ -302,8 +272,7 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:drawingCacheQuality="high"
-                                android:padding="2dp"
-                                app:srcCompat="@drawable/review" />
+                                android:padding="2dp" />
 
                             <TextView
                                 android:id="@+id/textView8"
@@ -334,8 +303,7 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:drawingCacheQuality="high"
-                                android:padding="2dp"
-                                app:srcCompat="@drawable/ctmarks" />
+                                android:padding="2dp" />
 
                             <TextView
                                 android:id="@+id/textView9"
@@ -352,17 +320,10 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:id="@+id/bottomNavigationView"
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:layout_gravity="center"
-                    android:background="#4D4D4D"
-                    app:menu="@menu/bottom_navmenu" />
-
 
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
 
-</androidx.drawerlayout.widget.DrawerLayout>
+
+</RelativeLayout>
