Minor changes to the bottom nav and Memory management of activity

--- a/app/src/main/res/menu/bottom_navmenu.xml
+++ b/app/src/main/res/menu/bottom_navmenu.xml
@@ -13,8 +13,11 @@
     <item android:title="LinkedIn"
         android:icon="@drawable/linkedin"
         android:id="@+id/LinkedInNav"/>
-    <item android:title="Profile"
-        android:icon="@drawable/profile"
-        android:id="@+id/ProfileNav"/>
+
+    <item
+        android:id="@+id/invisible"
+        android:visible="false"
+        android:icon="@drawable/arrow_forward"
+        android:title="account" />
 
 </menu>
